k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: recommendations
  namespace: app
spec:
  selector:
    app: recommendations
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
